trunk/Archive2/14/843362367e36fb/output
main.cpp: In function 'int main()':
main.cpp:56:12: error: conversion from 'D' to non-scalar type 'C' requested
     C c2 = d1; 
            ^
